# video-transcribe-payment

./: .env.example  .gitignore  Cargo.toml  definitions.py  homologacao-619113-VTH_cert.pem  log.py  main.py  pix_info.py  rustfmt.toml
src/: emv.rs  http_client.rs  main.rs
src/db/: mod.rs
src/services/: mod.rs  pix_service.rs
